# slideshow

./: .gitignore  .ycm_extra_conf.py  Doxyfile  Makefile.am  README.md  ani_line.cpp  ani_line.h  configure.ac  endslide.cpp  endslide.h  file.h  gcontext.h  gcontextchange.cpp  gcontextchange.h  image.cpp  image.h  instruction.cpp  instruction.h  intro.slide  main.cpp  mtext.cpp  mtext.h  parameter.h  playctl.cpp  playctl.h  point.cpp  point.h  rectangle.cpp  rectangle.h  scriptfile.cpp  scriptfile.h  slide.cpp  slide.h  test.slide  text.cpp  text.h  util.cpp  util.h
intro/: intro.slide
